--- a/views/productPages/productMain/productMain.html
+++ b/views/productPages/productMain/productMain.html
@@ -111,7 +111,9 @@
                     ><i class="fas fa-check-circle"></i> Dễ dàng tích hợp</span
                   >
                 </div>
-                <a href="/productSeparateProductionMeter" class="product-link"
+                <a
+                  href="/productSeparateProductionGasMeter"
+                  class="product-link"
                   >XEM CHI TIẾT</a
                 >
               </div>
@@ -175,7 +177,7 @@
                   >
                 </div>
                 <a
-                  href="/productSeparateProductionPressureValve"
+                  href="/productSeparateProductionPressureRegulatorValve"
                   class="product-link"
                   >XEM CHI TIẾT</a
                 >
