replace some images of home, about and header from being hosted by imgur to being hosted by imagekit

--- a/views/aboutPages/aboutMain.html
+++ b/views/aboutPages/aboutMain.html
@@ -25,7 +25,10 @@
 
     <!-- Main Content -->
     <div class="hero">
-      <img src="https://i.imgur.com/UvGDijb.png" alt="Industrial Facility" />
+      <img
+        src="https://ik.imagekit.io/1e8470bv5/about-banner.png?updatedAt=1750347696406"
+        alt="About Banner"
+      />
     </div>
 
     <!----- ABOUT SECTION HTML ----->
