--- a/views/components/header/header.html
+++ b/views/components/header/header.html
@@ -2,7 +2,7 @@
 <header class="header">
   <div class="logo-container">
     <img
-      src="https://i.imgur.com/Gt4lxV2.png"
+      src="https://ik.imagekit.io/1e8470bv5/company-logo.png?updatedAt=1750347074874"
       alt="Ky Long Logo"
       class="logo"
     />
