--- a/views/homePages/homeMain.html
+++ b/views/homePages/homeMain.html
@@ -25,7 +25,10 @@
 
     <!-- HERO SECTION -->
     <div class="hero">
-      <img src="https://i.imgur.com/gOCWMVl.png" alt="Industrial Facility" />
+      <img
+        src="https://ik.imagekit.io/1e8470bv5/home-baner.png?updatedAt=1750347137730"
+        alt="Home Banner"
+      />
     </div>
     <!----- END OF HERO SECTION HTML ----->
 
@@ -116,7 +119,7 @@
                 <div class="feature-card">
                   <div class="feature-image">
                     <img
-                      src="https://i.imgur.com/mIyKxPx.png"
+                      src="https://ik.imagekit.io/1e8470bv5/home-feature-image-1.png?updatedAt=1750347286326"
                       alt="Thắp Sáng Tương Lai"
                     />
                   </div>
@@ -125,8 +128,8 @@
                 <div class="feature-card">
                   <div class="feature-image">
                     <img
-                      src="https://i.imgur.com/tBe1neS.png"
-                      alt="Thắp Sáng Tương Lai"
+                      src="https://ik.imagekit.io/1e8470bv5/home-feature-image-2.png?updatedAt=1750347349206"
+                      alt="Vững Bền Thành Quả"
                     />
                   </div>
                   <h3>Vững Bền Thành Quả</h3>
@@ -134,8 +137,8 @@
                 <div class="feature-card">
                   <div class="feature-image">
                     <img
-                      src="https://i.imgur.com/XKQ0o6Z.png"
-                      alt="Thắp Sáng Tương Lai"
+                      src="https://ik.imagekit.io/1e8470bv5/home-feature-image-3.png?updatedAt=1750347448036"
+                      alt="Công Nghệ Xanh Sạch"
                     />
                   </div>
                   <h3>Công Nghệ Xanh Sạch</h3>
@@ -143,8 +146,8 @@
                 <div class="feature-card">
                   <div class="feature-image">
                     <img
-                      src="https://i.imgur.com/b0207s5.png"
-                      alt="Thắp Sáng Tương Lai"
+                      src="https://ik.imagekit.io/1e8470bv5/home-feature-image-4.png?updatedAt=1750347562255"
+                      alt="Cam Kết Mạnh Mẽ"
                     />
                   </div>
                   <h3>Cam Kết Mạnh Mẽ</h3>
