--- a/views/homePages/homeMain.html
+++ b/views/homePages/homeMain.html
@@ -690,7 +690,10 @@
           <!-- Embedded news items -->
           <div class="news-item" data-article-url="/newsArticle1">
             <div class="news-thumbnail">
-              <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức 1" />
+              <img
+                src="https://ik.imagekit.io/1e8470bv5/news-article-1.png?updatedAt=1750348208141"
+                alt="Tin tức 1"
+              />
               <div class="news-date">01/03/2025</div>
             </div>
             <h3 class="news-item-title">
@@ -701,7 +704,10 @@
 
           <div class="news-item" data-article-url="/newsArticle2">
             <div class="news-thumbnail">
-              <img src="https://i.imgur.com/0MGOlmy.png" alt="Tin tức 2" />
+              <img
+                src="https://ik.imagekit.io/1e8470bv5/news-article-2.png?updatedAt=1750348185735"
+                alt="Tin tức 2"
+              />
               <div class="news-date">25/02/2025</div>
             </div>
             <h3 class="news-item-title">
@@ -712,18 +718,24 @@
 
           <div class="news-item" data-article-url="/newsArticle1">
             <div class="news-thumbnail">
-              <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức 3" />
+              <img
+                src="https://ik.imagekit.io/1e8470bv5/news-article-1.png?updatedAt=1750348208141"
+                alt="Tin tức 3"
+              />
               <div class="news-date">18/02/2025</div>
             </div>
             <h3 class="news-item-title">
-              Khí thiên nhiên hóa lỏng LNG: Khái niệm và quy trình sản xuất
+              TỔNG QUAN VỀ DIỄN BIẾN GIÁ KHÍ LNG TRONG 5 NĂM QUA
             </h3>
             <div class="news-read-more">Xem chi tiết</div>
           </div>
 
           <div class="news-item" data-article-url="/newsArticle1">
             <div class="news-thumbnail">
-              <img src="https://i.imgur.com/exD5v9p.png" alt="Tin tức 4" />
+              <img
+                src="https://ik.imagekit.io/1e8470bv5/news-article-1.png?updatedAt=1750348208141"
+                alt="Tin tức 4"
+              />
               <div class="news-date">10/02/2025</div>
             </div>
             <h3 class="news-item-title">
