component header: remake

--- a/views/servicePages/serviceMain.html
+++ b/views/servicePages/serviceMain.html
@@ -23,7 +23,7 @@
       as="fetch"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="components/header/header.css" />
+    <link rel="stylesheet" href="components/header/header.css?v=1.0" />
     <link rel="stylesheet" href="components/footer/footer.css" />
     <link rel="stylesheet" href="servicePages/serviceMain.css" />
   </head>
@@ -268,7 +268,7 @@
     <!-- Footer Component -->
     <div id="footer"></div>
 
-    <script src="components/header/header.js"></script>
-    <script src="servicePages/serviceMain.js"></script>
+    <script src="components/header/header.js?v=1.0"></script>
+    <script src="servicePages/serviceMain.js?v=1.0"></script>
   </body>
 </html>
