--- a/views/newsPages/newsMain/newsMain.html
+++ b/views/newsPages/newsMain/newsMain.html
@@ -23,7 +23,7 @@
       as="fetch"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="components/header/header.css" />
+    <link rel="stylesheet" href="components/header/header.css?v=1.0" />
     <link rel="stylesheet" href="components/footer/footer.css" />
     <link rel="stylesheet" href="newsPages/newsMain/newsMain.css" />
   </head>
@@ -220,7 +220,7 @@
     <!-- Footer Component -->
     <div id="footer"></div>
 
-    <script src="components/header/header.js"></script>
+    <script src="components/header/header.js?v=1.0"></script>
     <script src="newsPages/newsMain/newsMain.js"></script>
   </body>
 </html>
