--- a/views/productPages/productMain/productMain.html
+++ b/views/productPages/productMain/productMain.html
@@ -23,7 +23,7 @@
       as="fetch"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="components/header/header.css" />
+    <link rel="stylesheet" href="components/header/header.css?v=1.0" />
     <link rel="stylesheet" href="components/footer/footer.css" />
     <link rel="stylesheet" href="productPages/productMain/productMain.css" />
   </head>
@@ -326,7 +326,7 @@
     <!-- Footer Component -->
     <div id="footer"></div>
 
-    <script src="components/header/header.js"></script>
+    <script src="components/header/header.js?v=1.0"></script>
     <script src="productPages/productMain/productMain.js"></script>
   </body>
 </html>
