component header: remake

--- a/views/components/header/header.html
+++ b/views/components/header/header.html
@@ -78,12 +78,7 @@
 
                   <div class="contact-text">
                     <div>Email:</div>
-                    <a
-                      href="mailto:info@kylong.com.vn"
-                      title="Gửi email cho Kỳ Long"
-                    >
-                      info@kylong.com.vn
-                    </a>
+                    <div class="contact-text">info@kylong.com.vn</div>
                   </div>
                 </div>
               </div>
