component header: remake

--- a/views/components/header/header.html
+++ b/views/components/header/header.html
@@ -78,7 +78,7 @@
 
                   <div class="contact-text">
                     <div>Email:</div>
-                    <div class="contact-text">info@kylong.com.vn</div>
+                    <div class="contact-text">info@kylongtech.com</div>
                   </div>
                 </div>
               </div>
