component header: remake

--- a/views/aboutPages/aboutMain.html
+++ b/views/aboutPages/aboutMain.html
@@ -15,7 +15,7 @@
       as="fetch"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="components/header/header.css" />
+    <link rel="stylesheet" href="components/header/header.css?v=1.0" />
     <link rel="stylesheet" href="components/footer/footer.css" />
     <link rel="stylesheet" href="aboutPages/aboutMain.css" />
   </head>
@@ -248,7 +248,7 @@
     <div id="footer"></div>
 
     <!-- Scripts -->
-    <script src="components/header/header.js"></script>
+    <script src="components/header/header.js?v=1.0"></script>
     <script src="aboutPages/aboutMain.js"></script>
 
     <!-- Load components -->
