--- a/views/contactPages/contactMain.html
+++ b/views/contactPages/contactMain.html
@@ -15,7 +15,7 @@
       as="fetch"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="components/header/header.css" />
+    <link rel="stylesheet" href="components/header/header.css?v=1.0" />
     <link rel="stylesheet" href="components/footer/footer.css" />
     <link rel="stylesheet" href="contactPages/contactMain.css" />
   </head>
@@ -133,7 +133,7 @@
     <div id="footer"></div>
 
     <!-- Scripts -->
-    <script src="components/header/header.js"></script>
+    <script src="components/header/header.js?v=1.0"></script>
     <script src="contactPages/contactMain.js"></script>
   </body>
 </html>
