--- a/views/aboutPages/aboutMain.html
+++ b/views/aboutPages/aboutMain.html
@@ -9,12 +9,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link
-      rel="preload"
-      href="components/header/header.html"
-      as="fetch"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="components/header/header.css?v=1.0" />
     <link rel="stylesheet" href="components/footer/footer.css" />
     <link rel="stylesheet" href="aboutPages/aboutMain.css" />
@@ -248,8 +242,8 @@
     <div id="footer"></div>
 
     <!-- Scripts -->
-    <script src="components/header/header.js?v=1.0"></script>
-    <script src="aboutPages/aboutMain.js"></script>
+    <script src="components/header/headerLoader.js?v=1.0"></script>
+    <script src="aboutPages/aboutMain.js?v=1.0"></script>
 
     <!-- Load components -->
     <script></script>
