--- a/views/components/header/header.css
+++ b/views/components/header/header.css
@@ -1,4 +1,34 @@
 /* views\components\header\header.css */
+/* Top ribbon */
+.top-ribbon {
+  background-color: #e84e0f;
+  padding: 5px 0;
+  color: white;
+  font-size: 0.8rem;
+}
+
+.ribbon-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.ribbon-logo {
+  width: 30px;
+  height: auto;
+  margin-right: 10px;
+}
+
+.ribbon-company-info {
+  display: flex;
+  align-items: center;
+}
+
+.ribbon-company-name {
+  font-weight: bold;
+  margin-right: 15px;
+}
+
 /* Custom colors and styling */
 .header {
   background-color: #fff;
@@ -88,6 +118,10 @@
 }
 
 @media (max-width: 768px) {
+  .top-ribbon {
+    display: none; /* Hide ribbon on mobile */
+  }
+
   .company-name {
     font-size: 1.2rem;
   }
