--- a/views/components/header/header.html
+++ b/views/components/header/header.html
@@ -17,8 +17,26 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
     />
+    <link href="/components/header/header.css" rel="stylesheet" />
   </head>
   <body>
+    <!-- Top Orange Ribbon -->
+    <div class="top-ribbon">
+      <div class="container-fluid px-4">
+        <div class="ribbon-content">
+          <div class="ribbon-company-info">
+            <img
+              src="/components/header/images/companyLogo.png"
+              alt="Ky Long Logo"
+              class="ribbon-logo"
+            />
+            <span class="ribbon-company-name">KỲ LONG</span>
+            <span>Thắp sáng tương lai, vững bền thành quả</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Header Section -->
     <header class="header py-3">
       <div class="container-fluid px-4">
@@ -27,7 +45,7 @@
           <div class="col-lg-6 col-md-6 col-12">
             <div class="d-flex align-items-center">
               <img
-                src="https://ik.imagekit.io/1e8470bv5/company-logo.png?updatedAt=1750347074874"
+                src="/components/header/images/companyLogo.png"
                 alt="Ky Long Logo"
                 class="logo me-3"
               />
