--- a/views/components/header/header.html
+++ b/views/components/header/header.html
@@ -26,7 +26,7 @@
         <div class="ribbon-content">
           <div class="ribbon-company-info">
             <img
-              src="/components/header/images/companyLogo.png"
+              src="/components/header/images/companyLogo.webp"
               alt="Ky Long Logo"
               class="ribbon-logo"
             />
@@ -45,7 +45,7 @@
           <div class="col-lg-6 col-md-6 col-12">
             <div class="d-flex align-items-center">
               <img
-                src="/components/header/images/companyLogo.png"
+                src="/components/header/images/companyLogo.webp"
                 alt="Ky Long Logo"
                 class="logo me-3"
               />
