component header: remake

--- a/views/contactPages/contactMain.html
+++ b/views/contactPages/contactMain.html
@@ -12,6 +12,12 @@
     <link rel="stylesheet" href="components/footer/footer.css" />
     <link rel="stylesheet" href="contactPages/contactMain.css" />
   </head>
+  <link
+    rel="preload"
+    href="components/header/header.html"
+    as="fetch"
+    crossorigin="anonymous"
+  />
   <body>
     <!-- Header Component -->
     <div id="header"></div>
