--- a/views/homePages/homeMain.html
+++ b/views/homePages/homeMain.html
@@ -19,6 +19,12 @@
     />
     <link rel="stylesheet" href="components/footer/footer.css" />
     <link rel="stylesheet" href="homePages/homeMain.css" />
+    <link
+      rel="preload"
+      href="components/header/header.html"
+      as="fetch"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <!-- Header Component -->
