--- a/views/newsPages/newsMain/newsMain.html
+++ b/views/newsPages/newsMain/newsMain.html
@@ -25,6 +25,12 @@
     />
     <link rel="stylesheet" href="components/footer/footer.css" />
     <link rel="stylesheet" href="newsPages/newsMain/newsMain.css" />
+    <link
+      rel="preload"
+      href="components/header/header.html"
+      as="fetch"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <!-- Header Component -->
