--- a/views/servicePages/serviceMain.html
+++ b/views/servicePages/serviceMain.html
@@ -19,6 +19,12 @@
     />
     <link rel="stylesheet" href="components/footer/footer.css" />
     <link rel="stylesheet" href="servicePages/serviceMain.css" />
+    <link
+      rel="preload"
+      href="components/header/header.html"
+      as="fetch"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
