component header: remake

--- a/views/contactPages/contactMain.html
+++ b/views/contactPages/contactMain.html
@@ -6,9 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Liên Hệ - CÔNG TY TNHH ĐẦU TƯ THƯƠNG MẠI DỊCH VỤ KỲ LONG</title>
     <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+    />
+    <link
+      rel="preload"
+      href="components/header/header.html"
+      as="fetch"
+      crossorigin="anonymous"
+    />
+    <link href="/components/header/header.css" rel="stylesheet" />
     <link rel="stylesheet" href="components/footer/footer.css" />
     <link rel="stylesheet" href="contactPages/contactMain.css" />
   </head>
