--- a/views/newsPages/newsMain/newsMain.html
+++ b/views/newsPages/newsMain/newsMain.html
@@ -23,6 +23,7 @@
       as="fetch"
       crossorigin="anonymous"
     />
+    <link href="/components/header/header.css" rel="stylesheet" />
     <link rel="stylesheet" href="components/footer/footer.css" />
     <link rel="stylesheet" href="newsPages/newsMain/newsMain.css" />
     <link
