--- a/views/productPages/productMain/productMain.html
+++ b/views/productPages/productMain/productMain.html
@@ -23,14 +23,9 @@
       as="fetch"
       crossorigin="anonymous"
     />
+    <link href="/components/header/header.css" rel="stylesheet" />
     <link rel="stylesheet" href="components/footer/footer.css" />
     <link rel="stylesheet" href="productPages/productMain/productMain.css" />
-    <link
-      rel="preload"
-      href="components/header/header.html"
-      as="fetch"
-      crossorigin="anonymous"
-    />
   </head>
   <body>
     <!-- Header Component -->
