component footer: remake

--- a/views/components/footer/footer.html
+++ b/views/components/footer/footer.html
@@ -1,90 +1,29 @@
-<!-- views\components\footer\footer.html -->
+<!-- views/components/footer/footer.html -->
 <footer class="footer">
   <div class="footer-container">
     <div class="footer-column">
-      <h4>Về Kỳ Long</h4>
+      <h4>Giới Thiệu</h4>
       <ul>
-        <li>
-          <a href="/aboutMain#gioi-thieu" title="Giới thiệu về Kỳ Long"
-            >Giới thiệu</a
-          >
-        </li>
-        <li>
-          <a
-            href="/aboutMain#lich-su-phat-trien"
-            title="Lịch sử phát triển của Kỳ Long"
-            >Lịch sử</a
-          >
-        </li>
-        <li>
-          <a
-            href="/aboutMain#van-hoa-doanh-nghiep"
-            title="Văn hóa doanh nghiệp của Kỳ Long"
-            >Văn hóa</a
-          >
-        </li>
-        <li>
-          <a
-            href="/aboutMain#doi-ngu-quan-ly"
-            title="Đội ngũ quản lý của Kỳ Long"
-            >Đội ngũ</a
-          >
-        </li>
+        <li><a href="#" title="Sản phẩm">Sản Phẩm</a></li>
+        <li><a href="#" title="Dịch vụ">Dịch Vụ</a></li>
       </ul>
     </div>
+
     <div class="footer-column">
-      <h4>Sản phẩm</h4>
+      <h4>Tin Tức</h4>
       <ul>
         <li>
-          <a href="/productMain#production" title="Sản xuất Kỳ Long"
-            >Sản xuất</a
+          <a href="#" title="An toàn - Sức khoẻ - Môi trường"
+            >An Toàn - Sức Khoẻ - Môi Trường</a
           >
         </li>
-        <li>
-          <a href="/productMain#commerce" title="Thương mại Kỳ Long"
-            >Thương mại</a
-          >
-        </li>
+        <li><a href="#" title="Liên hệ">Liên Hệ</a></li>
       </ul>
     </div>
-    <div class="footer-column">
-      <h4>Dịch vụ</h4>
-      <ul>
-        <li>
-          <a href="/serviceMain#sua-chua" title="Sửa chữa Kỳ Long">Sửa chữa</a>
-        </li>
-        <li>
-          <a href="/serviceMain#cho-thue" title="Cho thuê Kỳ Long">Cho thuê</a>
-        </li>
-        <li>
-          <a
-            href="/serviceMain#van-tai"
-            title="Vận tải và hỗ trợ vận tải Kỳ Long"
-            >Vận tải</a
-          >
-        </li>
-        <li>
-          <a href="/serviceMain#cong-nghe" title="Công nghệ thông tin Kỳ Long"
-            >Công nghệ</a
-          >
-        </li>
-        <li>
-          <a
-            href="/serviceMain#tu-van"
-            title="Tư vấn, nghiên cứu và khoa học Kỳ Long"
-            >Tư vấn</a
-          >
-        </li>
-        <li>
-          <a href="/serviceMain#xay-dung" title="Xây dựng và Lắp đặt Kỳ Long"
-            >Xây dựng</a
-          >
-        </li>
-      </ul>
-    </div>
+
     <div class="footer-column">
       <h4>Liên hệ</h4>
-      <p>81-83 Nguyễn Hữu Cầu, Phường Tân Định, Quận 1, TP. Hồ Chí Minh</p>
+      <p>Lầu 12, số 27 Dinh Bộ Lĩnh, P. Bình Thạnh, TP. Hồ Chí Minh</p>
       <p>
         Điện thoại:
         <a href="tel:+84 96 227 7912" title="Gọi cho Kỳ Long"
@@ -94,26 +33,13 @@
       <p>
         Email:
         <a href="mailto:info@kylong.com.vn" title="Gửi email cho Kỳ Long"
-          >info@kylong.com.vn</a
+          >info@kylongtech.com</a
         >
       </p>
     </div>
   </div>
+
   <div class="footer-bottom">
-    <div class="copyright">
-      © 2025 Công ty TNHH Đầu Tư Thương Mại Dịch Vụ Kỳ Long. All rights
-      reserved.
-    </div>
-    <div class="footer-links">
-      <a href="/privacy-policy" title="Chính sách bảo mật Kỳ Long"
-        >Chính sách bảo mật</a
-      >
-      |
-      <a href="/terms-of-service" title="Điều khoản sử dụng Kỳ Long"
-        >Điều khoản sử dụng</a
-      >
-      |
-      <a href="/sitemap.xml" title="Sitemap Kỳ Long">Sitemap</a>
-    </div>
+    <div class="copyright">Thắp sáng tương lai, vững bền thành công</div>
   </div>
 </footer>
