--- a/views/homePages/homeMain.html
+++ b/views/homePages/homeMain.html
@@ -19,7 +19,7 @@
     />
     <link href="/components/header/header.css" rel="stylesheet" />
     <link rel="stylesheet" href="components/footer/footer.css" />
-    <link rel="stylesheet" href="homePages/homeMain.css" />
+    <link rel="stylesheet" href="homePages/homeMain.css?v=1.0" />
   </head>
   <body>
     <!-- Header Component -->
@@ -158,14 +158,36 @@
       </div>
     </nav>
 
-    <!-- HERO SECTION -->
-    <div class="hero">
-      <img
-        src="https://ik.imagekit.io/1e8470bv5/home-baner.png?updatedAt=1750347137730"
-        alt="Home Banner"
-      />
+    <!-- BANNER SECTION -->
+    <div class="banner">
+      <div class="banner-container">
+        <img
+          src="https://ik.imagekit.io/1e8470bv5/homeBanner/homeBanner0.png?updatedAt=1754150711948"
+          alt="Home Banner 0"
+        />
+        <img
+          src="https://ik.imagekit.io/1e8470bv5/homeBanner/homeBanner1.png?updatedAt=1754151371772"
+          alt="Home Banner 1"
+        />
+        <img
+          src="https://ik.imagekit.io/1e8470bv5/homeBanner/homeBanner2.png?updatedAt=1754150845987"
+          alt="Home Banner 2"
+        />
+        <img
+          src="https://ik.imagekit.io/1e8470bv5/homeBanner/homeBanner3.png?updatedAt=1754150981240"
+          alt="Home Banner 3"
+        />
+        <img
+          src="https://ik.imagekit.io/1e8470bv5/homeBanner/homeBanner4.png?updatedAt=1754151036029"
+          alt="Home Banner 4"
+        />
+        <img
+          src="https://ik.imagekit.io/1e8470bv5/homeBanner/homeBanner5.png?updatedAt=1754151078263"
+          alt="Home Banner 5"
+        />
+      </div>
     </div>
-    <!----- END OF HERO SECTION HTML ----->
+    <!----- END OF BANNER SECTION HTML ----->
 
     <!----- INTRO SECTION HTML ----->
     <section class="intro-section">
